# terraria-autofish

./: .envrc  .rustfmt.toml  Cargo.toml  LICENSE  README.md  config.default.toml  flake.nix  rust-toolchain.toml
nix/: package.nix
src/: main.rs
src/bot/: event.rs  fisher.rs  mod.rs  potions.rs  reader.rs  scanner.rs
src/constants/: items.rs  mod.rs
src/utils/: cli.rs  config.rs  keyboard.rs  log.rs  mem.rs  mod.rs  process.rs
